# CompGraphTest

./: .codespellrc  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Export_8h.html  README_8md.html  annotated.html  classcg_1_1Vec2.html  classcg_1_1Vec3.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_c17fa6a672d8637adc92d3261eefb63c.html  files.html  index.html  modules.html  namespacecg.html  namespaces.html  pages.html  searchdata-v1.js  vec2_8cpp.html  vec2_8hpp.html  vec3_8cpp.html  vec3_8hpp.html
.github/workflows/: ci.yml
cmake/: coverage.cmake  dev-mode.cmake  docs.cmake  spell-targets.cmake
docs/: conf.py.in
test/: CMakeLists.txt
test/source/: vec2_test.cpp  vec3_test.cpp
